--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,12 +58,13 @@ body {
 
 /* header background image */
 .headerbg {
-	background-image: url("/public/headerbg.jpg");
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/public/bgdark.png");
 	background-size: cover;
+	background-blend-mode: overlay; /* Ensures the gradient blends with the image */
 }
 
-header h1 {
-	font-size: 4rem;
+.headerbg h1 {
+	font-size: 5rem;
 	margin-bottom: 0.5rem;
 	color: #1a73e8;
 	opacity: 0;
@@ -103,11 +104,6 @@ header {
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.06);
 }
 
-header h1 {
-	font-size: 4rem;
-	margin-bottom: 0.5rem;
-	color: #1a73e8;
-}
 
 header h2 {
 	font-size: 2rem;
