--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -68,7 +68,7 @@
         </ul>
         {{#if isMyProfile}}
         <div class="manageLinks">
-            <a href="/profile/{{user._id}}/edit">Managed Profile & Projects</a>
+            <a href="/profile/{{user._id}}/edit">Manage Profile & Projects</a>
         </div>
         {{/if}}
     </div>
