--- a/views/projectcreate.handlebars
+++ b/views/projectcreate.handlebars
@@ -1,7 +1,7 @@
 {{! Handlebars for the page for users to create a project }}
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/css/projects.css">
+    <link rel="stylesheet" href="/public/css/createproject.css">
 </head>
 {{> navbar}}
 {{#if error}}
