--- a/views/partials/commentsList.handlebars
+++ b/views/partials/commentsList.handlebars
@@ -1,11 +1,11 @@
-<ul>
+<ul class="commentList">
 	{{#each comments}}
-		<li>
-			{{this.author}}:
-			{{this.content}}
+		<li class="commentItem">
+			<strong>{{this.author}}</strong>: {{this.content}}
 		</li>
 	{{/each}}
 </ul>
+
 {{#unless comments}}
 	<p id="no-comments">No comments yet.</p>
 {{/unless}}
