--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,8 +1,7 @@
 {{! Main handlebars layout to be used for all pages }}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 	<head>
-		<meta charset="utf-8" />
 		<title>{{title}}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		{{!-- <link rel="stylesheet" href="/public/css/main.css" /> --}}
