validate login projects and signup

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
 
 <div class="navbar">
 	<div class="nav-left">
-		<a href="/"><img src="../public/LogoB.png" class="logo" /></a>
+		<a href="/"><img src="../public/LogoB.png" class="logo" alt="GitMatches Logo"/></a>
 		<a href="/" class="brand-text">GitMatches</a>
 	</div>
 	<a href="/">Home</a>
