--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,5 @@
 {{! Handlebars for the signup page }}
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/main.css">
 </head>
 
@@ -9,7 +8,7 @@
 
 <div class="navbar">
 	<div class="nav-left">
-		<a href="/"><img src="../public/LogoB.png" class="logo" /></a>
+		<a href="/"><img src="../public/LogoB.png" class="logo" alt="GitMatches Logo"/></a>
 		<a href="/" class="brand-text">GitMatches</a>
 	</div>
 	<a href="/">Home</a>
