--- a/views/projectcreate.handlebars
+++ b/views/projectcreate.handlebars
@@ -1,6 +1,5 @@
 {{! Handlebars for the page for users to create a project }}
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/createproject.css">
 </head>
 {{> navbar}}
@@ -62,5 +61,15 @@
             placeholder: true,
             placeholderValue: 'Select languages'
         });
+
+        // Fuckass algorithm #3!!!
+        let culprits = [].slice.call(document.getElementsByClassName("choices__list--dropdown"));
+        console.log("Culprits");
+        console.log(culprits);
+
+        // apply role to each generated element
+        for(const i in culprits) {
+            culprits[i].setAttribute("role", "list");
+        }
     });
 </script>
